update-progress-oauth-sso