@@ -4,10 +4,9 @@ import demo.app.entity.Address;
 import demo.app.entity.Employee;
 import demo.app.model.EmployeeRequest;
 import demo.app.model.EmployeeResponse;
-import demo.app.repository.AddressRepository;
 import demo.app.repository.EmployeeRepository;
 import demo.app.utils.AuthoritiesManager;
-import demo.app.validator.ValidationService;
+import demo.app.validator.ValidationHelper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -19,37 +18,25 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class EmployeeService {
-    private final ValidationService validationService;
-    private final AuthoritiesManager authoritiesManager;
-    private final EmployeeRepository employeeRepository;
-
     @Autowired
-    public EmployeeService(ValidationService validationService, AuthoritiesManager authoritiesManager, EmployeeRepository employeeRepository) {
-        this.validationService = validationService;
-        this.authoritiesManager = authoritiesManager;
-        this.employeeRepository = employeeRepository;
-    }
+    private ValidationHelper validationHelper;
+    @Autowired
+    private EmployeeRepository employeeRepository;
+    @Autowired
+    private AuthoritiesManager authoritiesManager;
+    @Autowired
+    private AddressService addressService;
 
     @Transactional
-    public void register(EmployeeRequest employeeRequest, OAuth2AuthenticatedPrincipal principal, Authentication auth) {
-        log.debug("Auth Authorities: {}", auth.getAuthorities().toString());
-        log.debug("Auth Principal: {}", auth.getPrincipal().toString());
-        log.debug("Auth Details: {}", auth.getDetails().toString());
-        log.debug("Auth Credentials: {}", auth.getCredentials().toString());
-        log.debug("Authorities Principal: {}", principal.getAuthorities().toString());
+    public void register(EmployeeRequest request, OAuth2AuthenticatedPrincipal principal, Authentication auth) {
+        validateAuthorization(principal, auth);
+        validationHelper.validate(request);
 
-        if (authoritiesManager.hasAuthority(principal, auth)) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "You are not authorized");
-        }
-
-        validationService.validate(employeeRequest);
-
-        String clientId = principal.getAttribute(OAuth2TokenIntrospectionClaimNames.CLIENT_ID);
+        String clientId = getClientIdFromPrincipal(principal);
         String email = getEmailFromPrincipal(principal);
 
         if (employeeRepository.existsByClientId(clientId)){
@@ -58,63 +45,57 @@ public class EmployeeService {
 
         Employee employee = new Employee();
         employee.setClientId(clientId);
-        employee.setFullName(employeeRequest.getFullName());
-        employee.setPhoneNumber(employeeRequest.getPhoneNumber());
+        employee.setFullName(request.getFullName());
+        employee.setPhoneNumber(request.getPhoneNumber());
         employee.setEmail(email);
-        employee.setCompany(employeeRequest.getCompany());
-        employee.setPosition(employeeRequest.getPosition());
-        employee.setGender(employeeRequest.getGender());
+        employee.setCompany(request.getCompany());
+        employee.setPosition(request.getPosition());
+        employee.setGender(request.getGender());
 
         Address address = new Address();
         address.setAddressId(UUID.randomUUID().toString());
-        address.setStreet(employeeRequest.getStreet());
-        address.setCity(employeeRequest.getCity());
-        address.setProvince(employeeRequest.getProvince());
-        address.setCountry(employeeRequest.getCountry());
-        address.setPostalCode(employeeRequest.getPostalCode());
+        address.setStreet(request.getStreet());
+        address.setCity(request.getCity());
+        address.setProvince(request.getProvince());
+        address.setCountry(request.getCountry());
+        address.setPostalCode(request.getPostalCode());
 
         employee.setAddress(address);
+        address.setEmployee(employee);
 
         employeeRepository.save(employee);
-
     }
     @Transactional(readOnly = true)
     public EmployeeResponse getCurrent(OAuth2AuthenticatedPrincipal principal, Authentication auth) {
-        if (authoritiesManager.hasAuthority(principal, auth)) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "You are not authorized");
-        }
+        validateAuthorization(principal, auth);
         String clientId = getClientIdFromPrincipal(principal);
-
-        Employee employee = employeeRepository.findById(clientId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Employee not found"));
-
+        Employee employee = findEmployeeByClientId(clientId);
         return toEmployeeResponse(employee);
     }
 
-    public EmployeeResponse getEmployeeById(String employeeId){
-        Employee employee = employeeRepository.findById(employeeId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Employee not found"));
+    // admin or manager service
+    @Transactional(readOnly = true)
+    public EmployeeResponse getByClientId(String clientId){
+        Employee employee = findEmployeeByClientId(clientId);
         return toEmployeeResponse(employee);
     }
 
+    // admin or manager service
     @Transactional(readOnly = true)
     public List<EmployeeResponse> findAllEmployee(OAuth2AuthenticatedPrincipal principal, Authentication auth) {
-        log.debug("Authorities Authentication: {}", auth.getAuthorities().toString());
-        log.debug("Authorities Principal: {}", principal.getAuthorities().toString());
-        if (authoritiesManager.hasAuthority(principal, auth)) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "You are not authorized");
+        if (!authoritiesManager.checkIfUserIsAdminOrManager(principal)) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "You are not authorized to perform this operation");
         }
+        validateAuthorization(principal, auth);
         List<Employee> employees = employeeRepository.findAll();
-        return employees.stream().map(this::toEmployeeResponse).collect(Collectors.toList());
+        return employees.stream().map(this::toEmployeeResponse).toList();
     }
     @Transactional
     public EmployeeResponse update(EmployeeRequest request, OAuth2AuthenticatedPrincipal principal){
-        validationService.validate(request);
+        validationHelper.validate(request);
 
         String clientId = getClientIdFromPrincipal(principal);
-
-        Employee employee = employeeRepository.findById(clientId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Employee not found"));
+        Employee employee = findEmployeeByClientId(clientId);
 
         employee.setFullName(request.getFullName());
         employee.setPhoneNumber(request.getPhoneNumber());
@@ -124,9 +105,9 @@ public class EmployeeService {
         employeeRepository.save(employee);
         return toEmployeeResponse(employee);
     }
-
     private EmployeeResponse toEmployeeResponse(Employee employee) {
         return EmployeeResponse.builder()
+                .employeeId(employee.getEmployeeId())
                 .clientId(employee.getClientId())
                 .fullName(employee.getFullName())
                 .phoneNumber(employee.getPhoneNumber())
@@ -134,18 +115,16 @@ public class EmployeeService {
                 .company(employee.getCompany())
                 .position(employee.getPosition())
                 .gender(employee.getGender())
-                .address(employee.getAddress())
+                .address(addressService.toAddressResponse(employee.getAddress()))
                 .build();
-
     }
     private String getClientIdFromPrincipal(OAuth2AuthenticatedPrincipal principal) {
-        Map<String, Object> attributes = principal.getAttributes();
+        String attributes = principal.getAttribute(OAuth2TokenIntrospectionClaimNames.CLIENT_ID);
         if (attributes == null){
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Client ID not found");
         }
-        return attributes.get("client_id").toString();
+        return attributes;
     }
-
     private String getEmailFromPrincipal(OAuth2AuthenticatedPrincipal principal) {
         Map<String, Object> attributes = principal.getAttributes();
         if (attributes == null){
@@ -153,6 +132,13 @@ public class EmployeeService {
         }
         return attributes.get("email").toString();
     }
-
-
+    private Employee findEmployeeByClientId(String clientId) {
+        return employeeRepository.findByClientId(clientId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Employee not found"));
+    }
+    private void validateAuthorization(OAuth2AuthenticatedPrincipal principal, Authentication auth) {
+        if (authoritiesManager.hasAuthority(principal, auth)) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "You are not authorized");
+        }
+    }
 }
